# downbeat

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  data.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
CODE_OF_CONDUCT/: index.html
commands/: relay-monitor.md  relay-peers.md  relay-register.md  relay-reply.md  relay-send.md  update.md
contributing/: index.html
decisions/: index.html
docs/: decisions.md  docs-site-setup.md  launch-plan.md  oss-readiness-research.md  plugin.md  release-setup.md
docs-site-setup/: index.html
docs/superpowers/plans/: 2026-07-14-tui-hosted-relay-notify.md  2026-07-15-general-peer-tree.md
docs/superpowers/specs/: 2026-07-01-downbeat-product-identity.md  2026-07-08-migrate-to-plugin-design.md  2026-07-14-tui-hosted-relay-notify-design.md  2026-07-15-general-peer-tree-design.md  2026-07-19-message-schema-versioning-spec.md  2026-07-19-message-system-rework-spec.md  2026-07-19-peer-identity-spec.md  2026-07-19-per-peer-autonomy-spec.md
examples/: README.md
examples/parent-child-handoff/: README.md  demo.sh  demo.tape
hooks/: hooks.json  relay-inbox.py  relay-poll-offer.py  version-check.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1ef4ac64ffe2aff1___main___py.html  z_437a7f688279b88f___init___py.html  z_5011eddb56125a73_init_cmd_py.html  z_5011eddb56125a73_relay_cmds_py.html  z_52b7be57e2e7492a_errors_py.html  z_52b7be57e2e7492a_groups_py.html  z_52b7be57e2e7492a_logging_py.html  z_52b7be57e2e7492a_models_py.html  z_52b7be57e2e7492a_notify_py.html  z_52b7be57e2e7492a_paths_py.html  z_52b7be57e2e7492a_provenance_py.html  z_52b7be57e2e7492a_session_py.html  z_52b7be57e2e7492a_state_py.html  z_52b7be57e2e7492a_store_py.html  z_52b7be57e2e7492a_watcher_py.html  z_d2cf86fac0d4b5bd_broadcast_status_py.html  z_d2cf86fac0d4b5bd_chat_py.html  z_d2cf86fac0d4b5bd_help_py.html  z_d2cf86fac0d4b5bd_main_py.html  z_d2cf86fac0d4b5bd_message_detail_py.html  z_d2cf86fac0d4b5bd_peers_py.html  z_d2cf86fac0d4b5bd_quarantine_py.html  z_dfa4d9b104df20fa_add_peer_modal_py.html  z_dfa4d9b104df20fa_chat_composer_py.html  z_dfa4d9b104df20fa_chat_stream_py.html  z_dfa4d9b104df20fa_clipboard_py.html  z_dfa4d9b104df20fa_composer_py.html  z_dfa4d9b104df20fa_confirm_py.html  z_dfa4d9b104df20fa_edit_modal_py.html  z_dfa4d9b104df20fa_find_message_py.html  z_dfa4d9b104df20fa_inbox_list_py.html  z_dfa4d9b104df20fa_log_viewer_py.html  z_dfa4d9b104df20fa_message_view_py.html  z_dfa4d9b104df20fa_peer_admin_py.html  z_dfa4d9b104df20fa_peer_list_py.html  z_dfa4d9b104df20fa_peer_tabs_py.html  (+4 more)
launch-plan/: index.html
oss-readiness-research/: index.html
plugin/: index.html
release-setup/: index.html
roadmap/: index.html
search/: search_index.json
security/: index.html
skills/: downbeat
src/claude_relay/assets/: hooks_manifest.json
src/claude_relay/assets/commands/: relay-monitor.md  relay-register.md  relay-reply.md
src/claude_relay/assets/hooks/: relay-inbox.py  relay-poll-offer.py
src/claude_relay/cli/: __main__.py
src/claude_relay/cli/commands/: init_cmd.py  relay_cmds.py
src/claude_relay/core/: errors.py  groups.py  logging.py  models.py  paths.py  session.py  state.py  store.py  watcher.py
src/claude_relay/skill/: SKILL.md
src/claude_relay/tui/: app.py  messages.py  theme.tcss
src/claude_relay/tui/screens/: chat.py  help.py  main.py  message_detail.py  peers.py  quarantine.py
src/claude_relay/tui/widgets/: add_peer_modal.py  chat_composer.py  chat_stream.py  clipboard.py  confirm.py  edit_modal.py  find_message.py  inbox_list.py  log_viewer.py  message_view.py  peer_admin.py  peer_list.py  peer_tabs.py  rebind_modal.py  switch_acting_as.py
src/downbeat/assets/: hooks_manifest.json
src/downbeat/assets/commands/: relay-monitor.md  relay-peers.md  relay-register.md  relay-reply.md  relay-send.md
src/downbeat/assets/hooks/: relay-inbox.py  relay-poll-offer.py
src/downbeat/cli/: __main__.py
src/downbeat/cli/commands/: init_cmd.py  relay_cmds.py
src/downbeat/core/: errors.py  logging.py  models.py  notify.py  paths.py  provenance.py  session.py  state.py  store.py  watcher.py
src/downbeat/skill/: SKILL.md
src/downbeat/tui/: app.py
src/downbeat/tui/screens/: broadcast_status.py  chat.py  help.py  main.py  message_detail.py  peers.py
superpowers/plans/2026-07-14-tui-hosted-relay-notify/: index.html
superpowers/plans/2026-07-15-general-peer-tree/: index.html
superpowers/specs/2026-07-01-downbeat-product-identity/: index.html
superpowers/specs/2026-07-08-migrate-to-plugin-design/: index.html
superpowers/specs/2026-07-14-tui-hosted-relay-notify-design/: index.html
superpowers/specs/2026-07-15-general-peer-tree-design/: index.html
superpowers/specs/2026-07-19-message-schema-versioning-spec/: index.html
superpowers/specs/2026-07-19-message-system-rework-spec/: index.html
superpowers/specs/2026-07-19-peer-identity-spec/: index.html
superpowers/specs/2026-07-19-per-peer-autonomy-spec/: index.html
tests/: conftest.py  test_cli.py  test_cli_delivery.py  test_cli_detect_peer.py  test_cli_init.py  test_cli_register.py  test_groups.py  test_hooks_manifest_parity.py  test_logging.py  test_models.py  test_notify.py  test_paths.py  test_provenance.py  test_rebind.py  test_relay_poll_offer_hook.py  test_session.py  test_state.py  test_store_broadcast.py  test_store_delivery.py  test_store_messages.py  test_store_peers.py  test_store_quarantine.py  test_store_rename.py  test_tui_chat.py  test_tui_clipboard.py  test_tui_composer.py  test_tui_edit_delete.py  test_tui_find_message.py  test_tui_headinsert.py  test_tui_inbox.py  test_tui_message_detail.py  test_tui_message_view.py  test_tui_notify.py  test_tui_peer_admin.py  test_tui_peers.py  test_tui_smoke.py  test_version_check_hook.py  test_watch.py  test_watcher.py
(+12 files in other folders)
