[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "downbeat"
version = "0.9.0"
description = "Local, human-in-the-loop message bus for coordinating parallel AI coding-agent sessions on one machine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nazarii Ahapevych" }]
keywords = [
  "cli",
  "tui",
  "claude-code",
  "ai-agents",
  "orchestration",
  "multi-agent",
  "message-queue",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
dependencies = [
  "textual>=0.60",
  "watchdog>=4.0",
  "rich>=13",
  "rich-argparse>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.3",
  "pytest-cov>=5",
  "textual-dev>=1.5",
  "ruff>=0.4",
  "pyright>=1.1",
  "python-semantic-release>=9",
  "pre-commit>=3",
]
docs = [
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10",
]

[project.urls]
Homepage = "https://github.com/FreddieMcHeart/downbeat"
Repository = "https://github.com/FreddieMcHeart/downbeat"
Issues = "https://github.com/FreddieMcHeart/downbeat/issues"

[project.scripts]
downbeat = "downbeat.cli.__main__:main"





[tool.hatch.build.targets.wheel]
# packages includes the ENTIRE src/downbeat tree in the wheel — Python
# modules plus data dirs (skill/, assets/{hooks,commands,hooks_manifest.json}).
# No force-include needed; a force-include entry double-adds the same paths.
packages = ["src/downbeat"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
# tui/ excluded for now: 64 pre-existing errors, almost all Textual's
# query_one() -> Widget | None narrowing (always non-None post-mount in
# practice, but pyright can't know that) — a real cleanup, but a separate,
# larger pass than this CI-wiring change. cli/ and core/ are clean (0 errors)
# as of this config landing.
include = ["src/downbeat/cli", "src/downbeat/core"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.coverage.run]
# Required by py-cov-action/python-coverage-comment-action so paths in the
# coverage data match across the separate CI runners that generate vs. read it.
relative_files = true
source = ["src/downbeat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Guards against silent CI hangs (seen on ubuntu runners, cause under
# investigation): "thread" method dumps every thread's stack via
# faulthandler before killing the run, so a hang fails loud with a
# traceback instead of burning the whole Actions time budget in silence.
timeout = 30
timeout_method = "thread"

[tool.semantic_release]
# Version is Conventional-Commits-derived, not manually bumped — this field
# is python-semantic-release's OWN source of truth: it rewrites this literal
# value in place (commit, tag, changelog) on every qualifying release. Not a
# PEP 621 `dynamic = ["version"]` field — hatchling still reads it as static
# at build time; semantic-release just owns the edits.
version_toml = ["pyproject.toml:project.version"]
# The python-semantic-release GitHub Action runs build_command INSIDE its own
# Docker container (see action.yml: `runs: using: docker`), which is isolated
# from the runner's PATH — `astral-sh/setup-uv` on the host has no effect
# here. PSR's own docs prescribe installing uv inside build_command itself
# for exactly this reason: https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration-guides/uv_integration.html
#
# `uv lock --upgrade-package` + `git add uv.lock` is PSR's own documented fix
# (same page) for a real failure hit on the first release (0.1.1, db95371):
# PSR rewrites pyproject.toml's version but never touches uv.lock, so CI's
# `uv sync --locked` correctly rejects the mismatch — all 6 matrix legs
# failed on main until uv.lock was manually resynced. Staging it here means
# PSR's own commit step picks it up alongside the version bump + changelog.
#
# Hardcoded "downbeat", NOT "$PACKAGE_NAME": PSR's docs assume that env var
# is set by the action, but python-semantic-release/python-semantic-release
# @v9 (pinned in release.yml) doesn't export it — it's apparently a v10+
# action feature. With the var unset it expanded to "", and
# `uv lock --upgrade-package ""` hard-errored on every release (0.1.1,
# 0.1.2) — silently, because build_command has no `set -e`, so `git add` +
# `uv build` kept running after the failed line and the job still reported
# success. Confirmed via the actual job log, not assumed from docs alone.
#
# .claude-plugin/plugin.json's own `version` field is kept in sync with this
# one via the same commit — stdlib re+json (not tomllib), verified working
# locally on both an already-in-sync and a deliberately-mismatched value,
# in case the PSR docker container's Python is older than 3.11.
build_command = """
pip install uv
uv lock --upgrade-package "downbeat"
git add uv.lock
python3 -c '
import json, re, pathlib
version = re.search("version = \\"([^\\"]+)\\"", pathlib.Path("pyproject.toml").read_text()).group(1)
p = pathlib.Path(".claude-plugin/plugin.json")
d = json.loads(p.read_text())
d["version"] = version
p.write_text(json.dumps(d, indent=2) + "\\n")
'
git add .claude-plugin/plugin.json
uv build
"""
major_on_zero = false  # pre-1.0: breaking changes bump MINOR, not straight to 1.0.0
allow_zero_version = true  # PSR defaults to False, which forces the FIRST
# release to 1.0.0 regardless of commit history — contradicts the
# "Development Status :: 3 - Alpha" classifier above. Explicit true keeps
# releases in 0.x until a deliberate 1.0.0 cut.
commit_parser = "conventional"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
